--- a/views/create_message.ejs
+++ b/views/create_message.ejs
@@ -6,9 +6,26 @@
 <form method="post">
   <div class="form-group">
     <label for="postTitle">Title:</label>
-    <input type="text" name="postTitle" id="postTitle" class="form-control" placeholder="Hello World" value="<%= typeof post==='undefined' ? '' : post.title %>" required>
+    <input
+      type="text"
+      name="postTitle"
+      id="postTitle"
+      class="form-control"
+      placeholder="Hello World"
+      value="<%= !locals.post ? '' : post.title %>"
+      required
+    />
     <label for="comment">Comment:</label>
-    <textarea rows="5" name="comment" id="comment" class="form-control" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dictum justo, nec dapibus sem. Sed sit amet arcu nec leo ultrices placerat. Aliquam sollicitudin quis ligula quis ullamcorper. Donec scelerisque condimentum turpis sed vestibulum. In hac habitasse platea dictumst." required><%= typeof post==='undefined' ? '' : post.comment %></textarea>
+    <textarea
+      rows="5"
+      name="comment"
+      id="comment"
+      class="form-control"
+      placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dictum justo, nec dapibus sem. Sed sit amet arcu nec leo ultrices placerat. Aliquam sollicitudin quis ligula quis ullamcorper. Donec scelerisque condimentum turpis sed vestibulum. In hac habitasse platea dictumst."
+      required
+    >
+<%= !locals.post ? '' : post.comment %></textarea
+    >
   </div>
   <button type="submit" class="form-submit">Submit</button>
 </form>
