--- a/views/join.ejs
+++ b/views/join.ejs
@@ -7,8 +7,16 @@
 <% if (!locals.errors) { %>
 <form method="post">
   <div class="form-group">
-    <label for="secretPassword">What is the name of the first Lord of Cinder?</label>
-    <input type="password" class="form-control" id="secretPassword" name="secretPassword" required>
+    <label for="secretPassword"
+      >What is the name of the first Lord of Cinder?</label
+    >
+    <input
+      type="password"
+      class="form-control"
+      id="secretPassword"
+      name="secretPassword"
+      required
+    />
   </div>
   <button type="submit" class="form-submit">Submit</button>
 </form>
