--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,20 +6,26 @@
 <% if (user.status === 'Anonymous') { %>
 <p>Only exclusive-members can become admins.</p>
 <% } else if (user.status ==='Exclusive Member') { %>
-  <% if (!locals.errors) { %>
-    <form method="post">
-      <div class="form-group">
-        <label for="adminPassword">Admin password:</label>
-        <input type="password" class="form-control" id="adminPassword" name="adminPassword" required>
-      </div>
-      <button type="submit" class="form-submit">Submit</button>
-    </form>
-    <% } else { %>
-    <p>You don't know the password, you have no reason to be here.</p>
-    <%- include('./partials/errors_list') %>
-    <% } %>
+<% if (!locals.errors) { %>
+<form method="post">
+  <div class="form-group">
+    <label for="adminPassword">Admin password:</label>
+    <input
+      type="password"
+      class="form-control"
+      id="adminPassword"
+      name="adminPassword"
+      required
+    />
+  </div>
+  <button type="submit" class="form-submit">Submit</button>
+</form>
 <% } else { %>
-  <p>Remember, with great power comes great responsibility.</p>
-  <p>You can delete posts now but it doesn't mean that you have to.</p>
-    <% } %>
+<p>You don't know the password, you have no reason to be here.</p>
+<%- include('./partials/errors_list') %>
+<% } %>
+<% } else { %>
+<p>Remember, with great power comes great responsibility.</p>
+<p>You can delete posts now but it doesn't mean that you have to.</p>
+<% } %>
 <% } %>
