--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,47 @@
 <%- contentFor('page') %>
 
 <% if (locals.user) { %>
-<h2>User:<span style="color: crimson;"> <%= `${user.first_name} ${user.last_name}` %></span> / Status: <span style="color: crimson;"> <%= user.status %></span></h2>
+<h2>
+  User:<span style="color: crimson">
+    <%= `${user.first_name} ${user.last_name}` %></span
+  >
+  / Status: <span style="color: crimson"> <%= user.status %></span>
+</h2>
 <% if (user.status==='Anonymous') { %>
 <p>Wanna join the club? You can try <a href="/user/join-the-club">here</a>.</p>
 <% } else if (user.status==='Exclusive Member') { %>
-<p>Wanna join the admins? If you know the password, go <a href="/user/admin-page">here</a>.</p>
+<p>
+  Wanna join the admins? If you know the password, go
+  <a href="/user/admin-page">here</a>.
+</p>
 <% } %>
 <% } %>
 <% if (locals.posts && posts.length) { %>
 <div id="posts-wrapper">
   <% posts.forEach(post => { %>
   <div class="user-post">
-    <div style="display: flex; justify-content: space-between;">
-      <p><strong>Author: </strong><%= locals.user && user.status!=='Anonymous' ? `${post.first_name} ${post.last_name}` : 'Anonymous' %></p>
-      <p><strong>Membership status: </strong> <%= locals.user && user.status!=='Anonymous' ? post.status : 'Redacted' %></p>
-      <p><strong>Time: </strong><%= local.user && user.status!=='Anonymous' ? post.timestamp.toLocaleString() : 'Redacted' %></p>
+    <div class="user-data">
+      <p>
+        <strong>Author: </strong
+        ><%= locals.user && user.status!=='Anonymous' ? `${post.first_name} ${post.last_name}` : 'Anonymous' %>
+      </p>
+      <p>
+        <strong>Membership status: </strong>
+        <%= locals.user && user.status!=='Anonymous' ? post.status : 'Redacted' %>
+      </p>
+      <p>
+        <strong>Time: </strong
+        ><%= locals.user && user.status!=='Anonymous' ? post.timestamp.toLocaleString() : 'Redacted' %>
+      </p>
     </div>
-    <p><strong>Title: </strong><%= post.title %></p>
-    <p><strong>Comment: </strong><%= post.comment %></p>
+    <p>
+      <strong>Title: </strong
+      ><%= post.title %>
+    </p>
+    <p>
+      <strong>Comment: </strong
+      ><%= post.comment %>
+    </p>
     <% if (locals.user && user.status==='Admin') { %>
     <a href="/post/<%= post.id %>/delete">DELETE THIS MESSAGE</a>
     <% } %>
