--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,44 +1,48 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><%= title %></title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-<body>
-  <div id="content">
-    <header>
-      <h1><a href="/">Members Only</a></h1>
-    </header>
-    <main>
-      <nav>
-        <a href="/">Home</a>
-        <% if (!locals.user) { %>
-        <a href="/user/sign-up">Sign up</a>
-        <a href="/user/log-in">Log in</a>
-        <% } %>
-        <% if (locals.user) { %>
-        <a href="/post/new-message">Add message</a>
-        <% if (user.status === 'Anonymous') { %>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
+    <div id="content">
+      <header>
+        <h1><a href="/">Members Only</a></h1>
+      </header>
+      <main>
+        <nav>
+          <a href="/">Home</a>
+          <% if (!locals.user) { %>
+          <a href="/user/sign-up">Sign up</a>
+          <a href="/user/log-in">Log in</a>
+          <% } %>
+          <% if (locals.user) { %>
+          <a href="/post/new-message">Add message</a>
+          <% if (user.status === 'Anonymous') { %>
           <a href="/user/join-the-club">Join the Club</a>
           <% } else if ( user.status === 'Exclusive Member') { %>
-        <a href="/user/admin-page">Join the Admins</a>
-        <% } %>
-        <a href="/user/log-out">Log Out</a>
-        <% } %>
-      </nav>
-      <section id="dynamic-page">
-        <h1 style="text-align: center;"><%= title %></h1>
-        <%- page %>
-      </section>
-    </main>
-    <footer>
-      <p>Copyright © 2024 ValerioL94</p>
-      <a href="https://github.com/ValerioL94">
-        <img class="logo pulse" src="/images/github-mark.svg" alt="github logo" />
-      </a>
-    </footer>
-  </div>
-</body>
+          <a href="/user/admin-page">Join the Admins</a>
+          <% } %>
+          <a href="/user/log-out">Log Out</a>
+          <% } %>
+        </nav>
+        <section id="dynamic-page">
+          <h1 id="dynamic-title"><%= title %></h1>
+          <%- page %>
+        </section>
+      </main>
+      <footer>
+        <p>Copyright © 2024 ValerioL94</p>
+        <a href="https://github.com/ValerioL94">
+          <img
+            class="logo pulse"
+            src="/images/github-mark.svg"
+            alt="github logo"
+          />
+        </a>
+      </footer>
+    </div>
+  </body>
 </html>
