--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
       ><%= post.comment %>
     </p>
     <% if (locals.user && user.status==='Admin') { %>
-    <a href="/post/<%= post.id %>/delete">DELETE THIS MESSAGE</a>
+    <a href="/post/<%= post.id %>/delete" onclick="return confirm('Are you sure you want to delete this message?');">DELETE THIS MESSAGE</a>
     <% } %>
   </div>
   <% }) %>
